 - Added Spring.GetUnitCurrentCommand(unitID [, cmdIndex]) -> [cmdID, cmdOpts (coded), cmdTag[, cmdParam1[, cmdParam2 ... ]]]
   Returns the index-th command in the unit's queue (or nil). Note: cmdOpts are represented by a single number
   (usually a table otherwise), and params are returned on the stack as well. This function allocates no tables.

AI:
 - reveal unit's captureProgress, buildProgress and paralyzeDamage params through
   skirmishAiCallback_Unit_get{CaptureProgress,BuildProgress,ParalyzeDamage} functions

Misc:
 - remove joystick support
 - detect hangs during filesystem initialisation
 - fix stale thread-id cache in watchdog after reload
 - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 - account for raw search in AICallback::GetPathLength
 - use hidden window for offscreen context rendering
 - add /hang command
 - add /luagccontrol command
 - add /netping command
 - add /netmsgsmoothing command
 - add /distsortprojectiles command
 - remove LuaShaders config-setting
 - change PitchAdjust config-setting from a boolean to an integer
   0 disables, 1 scales pitch by the square root of game speed, 2
   scales linearly with game speed
 - `/nocost` now accepts 0/1 parameter (still toggles if none given)
 - model metadata for assimp/obj can now define pieces hierarchy
   by either nested tables or 'parent' key.
 - IME editing support for those with the proper SDL2 version/IME tool combination
 ! Made lockluaui.txt obsolete: no longer necessary for it to exists in order to enable VFS for LuaUI
 - use SHA2 rather than CRC32 content hashes

Fixes:
 - fix #1968 (units not moving in direction of next queued [build-]command if current order blocked)
 - fix #6060 (Max{Nano}Particles=0 still allowing 1 {nano}particle to spawn)
 - fix #6059 (units with high turnRate/brakeRate/acceleration moving unexpectedly)
 - fix #4268 (add Spring.AddObjectDecal)
 - fix #4755 (wrong usage of addr2line on FreeBSD)